adding validation for model, fix doc register
